--- a/perber/package.json
+++ b/perber/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Balloons.io",
-  "description": "Web multi-room chat server and client ready to use.",
+  "name": "Perber",
+  "description": "A multiplayer real-time chat application, that no registration, no data is saved",
   "version": "0.0.1",
   "dependencies": {
     "express": "3.3.4",
@@ -12,9 +12,9 @@
     "redis": "0.7.2",
     "connect-redis": "1.4.x",
     "passport": "~0.1.17",
-    "passport-facebook": "~0.1.5",
-    "passport-twitter": "~0.1.5",
-    "passport-douban": "~0.0.1",
+    // "passport-facebook": "~0.1.5",
+    // "passport-twitter": "~0.1.5",
+    // "passport-douban": "~0.0.1",
     "type-component": "0.0.1",
     "validator": "2.0.0"
   },
