move to mysql, fix loading and null status, modify package.json

--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -1,6 +1,13 @@
 {
     "redisURL": "http://localhost/",
 
+    "mysqlConf": {
+        "host" : "localhost",
+        "port" : 3306,
+        "user" : "your db user",
+        "password" : "your db pwd"
+    },
+
     "auth": {
         "twitter": {
             "consumerkey" : "your consumerkey",
