--- a/perber/package.json
+++ b/perber/package.json
@@ -16,7 +16,10 @@
     "passport-twitter": "~0.1.5",
     "passport-douban": "~0.0.1",
     "type-component": "0.0.1",
-    "validator": "2.0.0"
+    "validator": "2.0.0",
+    "validator": "2.0.0",
+    "mysql": "2.0.1",
+    "node-mysql" : "0.3.4"
   },
   "engines": {
     "node": ">= 0.8.0",
