modify UI color, add about box, add masonry stamp

--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -33,7 +33,8 @@
     },
 
     "session" : {
-        "secret" : "yourbestsecret"
+        "secret" : "yourbestsecret",
+        "age" : 0
     },
     "app": {
         "port": 6789
