--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -33,8 +33,7 @@
     },
 
     "session" : {
-        "secret" : "yourbestsecret",
-        "age" : 0
+        "secret" : "yourbestsecret"
     },
     "app": {
         "port": 6789
