--- a/perber/package.json
+++ b/perber/package.json
@@ -16,7 +16,8 @@
     "validator": "2.0.0",
     "mysql": "2.0.1",
     "node-mysql" : "0.3.4",
-    "qiniu" : "6.1.1"
+    "qiniu" : "6.1.1",
+    "node-qiniu" : "6.1.4"
   },
   "engines": {
     "node": ">= 0.8.0",
