--- a/perber/package.json
+++ b/perber/package.json
@@ -18,7 +18,8 @@
     "node-mysql" : "0.3.4",
     "qiniu" : "6.1.1",
     "node-qiniu" : "6.1.4",
-    "nodemailer" : "0.6.1"
+    "nodemailer" : "0.6.1",
+    "xmlreader" : "0.2.3"
   },
   "engines": {
     "node": ">= 0.8.0",
