--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -43,7 +43,9 @@
         "secret" : "yourbestsecret"
     },
     "app": {
-        "port": 6789
+        "port": 6789,
+        "timer" : 1,
+        "limit" : 30
     },
     "theme": {
         "name" : "default"
