--- a/perber/package.json
+++ b/perber/package.json
@@ -19,7 +19,8 @@
     "qiniu" : "6.1.1",
     "node-qiniu" : "6.1.4",
     "nodemailer" : "0.6.1",
-    "xmlreader" : "0.2.3"
+    "xmlreader" : "0.2.3",
+    "stepify" : "0.1.5"
   },
   "engines": {
     "node": ">= 0.8.0",
