--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -42,14 +42,18 @@
         "key" : "yourbestKey",
         "secret" : "yourbestsecret"
     },
+
     "app": {
         "port": 6789,
         "timer" : 1,
         "limit" : 10
     },
+
     "theme": {
         "name" : "default"
-    }
+    },
+
+    "debug": false
 }
 
 
