MYSQL连接采用连接池的形式，解决单连接断开后无法重连的问题。

--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -5,7 +5,8 @@
         "host" : "localhost",
         "port" : 3306,
         "user" : "your db user",
-        "password" : "your db pwd"
+        "password" : "your db pwd",
+	"database" : "your database"
     },
 
     "qiniuConfig": {
