--- a/perber/package.json
+++ b/perber/package.json
@@ -3,24 +3,24 @@
   "description": "A multiplayer real-time chat application, that no registration, no data is saved",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.3.4",
     "connect": "~2.8.4",
-    "debug": "~0.7.2",
-    "cookie": "0.0.x",
-    "jade": "~0.33.0",
-    "socket.io": "~0.9.16",
-    "redis": "0.7.2",
     "connect-redis": "1.4.x",
+    "cookie": "0.0.x",
+    "debug": "^4.0.1",
+    "express": "3.3.4",
+    "jade": "~0.33.0",
+    "mysql": "2.0.1",
+    "node-mysql": "0.3.4",
+    "node-qiniu": "6.1.4",
+    "nodemailer": "0.6.1",
     "passport": "~0.1.17",
+    "qiniu": "6.1.1",
+    "redis": "0.7.2",
+    "socket.io": "~0.9.16",
+    "stepify": "0.1.5",
     "type-component": "0.0.1",
     "validator": "2.0.0",
-    "mysql": "2.0.1",
-    "node-mysql" : "0.3.4",
-    "qiniu" : "6.1.1",
-    "node-qiniu" : "6.1.4",
-    "nodemailer" : "0.6.1",
-    "xmlreader" : "0.2.3",
-    "stepify" : "0.1.5"
+    "xmlreader": "0.2.3"
   },
   "engines": {
     "node": ">= 0.8.0",
