--- a/perber/package.json
+++ b/perber/package.json
@@ -6,11 +6,11 @@
     "connect": "~2.8.4",
     "connect-redis": "1.4.x",
     "cookie": "0.0.x",
-    "debug": "^4.0.1",
+    "debug": "^4.1.0",
     "express": "3.3.4",
     "jade": "~0.33.0",
-    "mysql": "2.0.1",
-    "node-mysql": "0.3.4",
+    "mysql": "^2.16.0",
+    "node-mysql": "^0.4.2",
     "node-qiniu": "6.1.4",
     "nodemailer": "0.6.1",
     "passport": "~0.1.17",
