upgrade packages. disabled qiniu upload

--- a/perber/package.json
+++ b/perber/package.json
@@ -3,23 +3,30 @@
   "description": "A multiplayer real-time chat application, that no registration, no data is saved",
   "version": "0.0.1",
   "dependencies": {
-    "connect": "~2.8.4",
-    "connect-redis": "1.4.x",
+    "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
+    "connect-redis": "^3.4.0",
     "cookie": "0.0.x",
+    "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
-    "express": "3.3.4",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "jade": "~0.33.0",
+    "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "node-mysql": "^0.4.2",
-    "node-qiniu": "6.1.4",
-    "nodemailer": "0.6.1",
+    "node-qiniu": "^6.2.0",
+    "nodemailer": "^4.6.8",
     "passport": "~0.1.17",
-    "qiniu": "6.1.1",
+    "qiniu": "^7.2.1",
     "redis": "0.7.2",
-    "socket.io": "~0.9.16",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "^1.13.2",
+    "socket.io": "^2.1.1",
+    "socketio-session": "^0.2.0",
     "stepify": "0.1.5",
     "type-component": "0.0.1",
-    "validator": "2.0.0",
+    "validator": "^10.8.0",
     "xmlreader": "0.2.3"
   },
   "engines": {
