--- a/perber/config/config-example.json
+++ b/perber/config/config-example.json
@@ -1,5 +1,9 @@
 {
-    "redisURL": "http://localhost/",
+    "redisConf": {
+        "host": "127.0.0.1",
+        "port": 6379,
+        "url": "//localhost/"
+    },
 
     "mysqlConf": {
         "host" : "localhost",
