--- a/perber/package.json
+++ b/perber/package.json
@@ -27,7 +27,14 @@
     "stepify": "0.1.5",
     "type-component": "0.0.1",
     "validator": "^10.8.0",
-    "xmlreader": "0.2.3"
+    "xmlreader": "0.2.3",
+    "uglify-js": ">=2.6.0",
+    "qs": ">=1.0.0",
+    "hoek": ">=4.2.1",
+    "mime": ">=1.4.1",
+    "lodash": ">=4.17.5",
+    "hawk": ">=3.1.3",
+    "cryptiles": ">=4.1.2"
   },
   "engines": {
     "node": ">= 0.8.0",
