--- a/perber/package.json
+++ b/perber/package.json
@@ -8,10 +8,15 @@
     "connect-redis": "^3.4.0",
     "cookie": "0.0.x",
     "cookie-parser": "^1.4.3",
+    "cryptiles": ">=4.1.2",
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "hawk": ">=3.1.3",
+    "hoek": ">=4.2.1",
     "jade": "~0.33.0",
+    "lodash": ">=4.17.5",
+    "mime": ">=1.4.1",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "node-mysql": "^0.4.2",
@@ -19,22 +24,18 @@
     "nodemailer": "^4.6.8",
     "passport": "~0.1.17",
     "qiniu": "^7.2.1",
+    "qs": ">=1.0.0",
     "redis": "0.7.2",
+    "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.13.2",
     "socket.io": "^2.1.1",
     "socketio-session": "^0.2.0",
     "stepify": "0.1.5",
     "type-component": "0.0.1",
-    "validator": "^10.8.0",
-    "xmlreader": "0.2.3",
     "uglify-js": ">=2.6.0",
-    "qs": ">=1.0.0",
-    "hoek": ">=4.2.1",
-    "mime": ">=1.4.1",
-    "lodash": ">=4.17.5",
-    "hawk": ">=3.1.3",
-    "cryptiles": ">=4.1.2"
+    "validator": "^10.8.0",
+    "xmlreader": "0.2.3"
   },
   "engines": {
     "node": ">= 0.8.0",
